@@ -49,7 +49,13 @@ namespace Hantek {
 		
 		this->handle = 0;
 		this->interface = -1;
+		
+#if LIBUSB_VERSION == 0
+		usb_init();
+		this->error = LIBUSB_SUCCESS;
+#else
 		this->error = libusb_init(&(this->context));
+#endif
 	}
 	
 	/// \brief Disconnects the device.
@@ -61,120 +67,98 @@ namespace Hantek {
 	/// \return A string with the result of the search.
 	QString Device::search() {
 		if(this->error)
-			return tr("Can't search for Hantek oscilloscopes: ").arg(Helper::libUsbErrorString(this->error));
+			return tr("Can't search for Hantek oscilloscopes: %1").arg(Helper::libUsbErrorString(this->error));
+		
 		QString message;
+		QString deviceAddress;
+		int errorCode = LIBUSB_SUCCESS;
 		
 #if LIBUSB_VERSION == 0
-		usb_init();
-		usb_find_busses();
-		usb_find_devices();
-	
-		struct usb_device *usbDSO = NULL;
-		for (struct usb_bus *usb_bus = usb_busses; usb_bus; usb_bus = usb_bus->next)
+		errorCode = usb_find_busses();
+		if(errorCode >= 0)
+			errorCode = usb_find_devices();
+		if(errorCode < 0)
+			return tr("Failed to get device list: %3").arg(Helper::libUsbErrorString(errorCode));
+		
+		struct usb_device *device = NULL;
+		
+		// Iterate through all usb devices
+		for(struct usb_bus *bus = usb_busses; bus; bus = bus->next) {
+			for(device = bus->devices; device; device = device->next) {
+				// Check VID and PID
+				if(device->descriptor.idVendor == HANTEK_VENDOR_ID) {
+					this->model = (Model) this->modelIds.indexOf(device->descriptor.idProduct);
+					if(this->model >= 0)
+						break; // Found a compatible device, ignore others
+				}
+			}
+			if(this->model >= 0) {
+				deviceAddress = QString("%1:%2").arg(bus->dirname).arg(device->filename);
+				break; // Found a compatible device, ignore other busses
+			}
+		}
+		
+		/// \todo Use 9 bit data model of DSO-5200(A)
+		/* if ((deviceModel == DSO_5200) || (deviceModel == DSO_5200A))
 		{
-			for (struct usb_device *dev = usb_bus->devices; dev; dev = dev->next)
-			{
-				if (dev->descriptor.idVendor == deviceVendor)
-				{
-					for (int i = 0; deviceModelsList[i] != DSO_LAST; i++)
-					{
-						if (dev->descriptor.idProduct == deviceModelsList[i])
-						{
-							usbDSO = dev;
-							deviceModel = dev->descriptor.idProduct;
-							qDebug("Hantek DSO model %4X found", deviceModel);
-							break;
+			extraBitsData = true;
+			qDebug("Using a 9-bita data model");
+		}*/
+		
+		if(this->model >= 0) {
+			// Open device
+			deviceAddress = QString("%1:%2").arg(device->bus->location, 3, 10, QLatin1Char('0')).arg(device->devnum, 3, 10, QLatin1Char('0'));
+			this->handle = usb_open(device);
+			if(this->handle) {
+				struct usb_config_descriptor *configDescriptor = device->config;
+				struct usb_interface *interface;
+				struct usb_interface_descriptor *interfaceDescriptor;
+				for(int interfaceIndex = 0; interfaceIndex < configDescriptor->bNumInterfaces; interfaceIndex++) {
+					interface = &configDescriptor->interface[interfaceIndex];
+					if(interface->num_altsetting < 1)
+						continue;
+					
+					interfaceDescriptor = &interface->altsetting[0];
+					if(interfaceDescriptor->bInterfaceClass == USB_CLASS_VENDOR_SPEC && interfaceDescriptor->bInterfaceSubClass == 0 && interfaceDescriptor->bInterfaceProtocol == 0 && interfaceDescriptor->bNumEndpoints == 2) {
+						// That's the interface we need, claim it
+						errorCode = usb_claim_interface(this->handle, interfaceDescriptor->bInterfaceNumber);
+						if(errorCode < 0) {
+							usb_close(this->handle);
+							this->handle = 0;
+							message = tr("Failed to claim interface %1 of device %2: %3").arg(QString::number(interfaceDescriptor->bInterfaceNumber), deviceAddress, Helper::libUsbErrorString(errorCode));
+						}
+						else {	
+							this->interface = interfaceDescriptor->bInterfaceNumber;
+							
+							// Check the maximum endpoint packet size
+							usb_endpoint_descriptor *endpointDescriptor;
+							this->outPacketLength = 0;
+							this->inPacketLength = 0;
+							for (int endpoint = 0; endpoint < interfaceDescriptor->bNumEndpoints; endpoint++) {
+								endpointDescriptor = &interfaceDescriptor->endpoint[endpoint];
+								switch(endpointDescriptor->bEndpointAddress) {
+									case HANTEK_EP_OUT:
+										this->outPacketLength = endpointDescriptor->wMaxPacketSize;
+										break;
+									case HANTEK_EP_IN:
+										this->inPacketLength = endpointDescriptor->wMaxPacketSize;
+										break;
+								}
+							}
+							message = tr("Device found: Hantek %1 (%2)").arg(this->modelStrings[this->model], deviceAddress);
+							emit connected();
 						}
 					}
 				}
 			}
+			else
+				message = tr("Couldn't open device %1").arg(deviceAddress);
 		}
-	
-		if (usbDSO == NULL)
-		{
-			dsoIOMutex.unlock();
-			qDebug("Hantek DSO not found");
-			return -1;
-		}
-	
-		if ((deviceModel == DSO_5200) || (deviceModel == DSO_5200A))
-		{
-			extraBitsData = true;
-			qDebug("Using a 9-bita data model");
-		}
-	
-		usbDSOHandle = ::usb_open(usbDSO);
-		if (usbDSOHandle == NULL)
-		{
-			dsoIOMutex.unlock();
-			qDebug("Can't open USB device");
-			return -2;
-		}
-		
-		struct usb_config_descriptor *usbConfig = usbDSO->config;
-		for (int i = 0; i < usbConfig->bNumInterfaces; i++)
-		{
-			struct usb_interface *usbInterface = &usbConfig->interface[i];
-			if (usbInterface->num_altsetting < 1)
-				continue;
-	
-			struct usb_interface_descriptor *usbInterfaceDescr = &usbInterface->altsetting[0];
-			if (usbInterfaceDescr->bInterfaceClass == USB_CLASS_VENDOR_SPEC
-				&& usbInterfaceDescr->bInterfaceSubClass == 0
-				&& usbInterfaceDescr->bInterfaceProtocol == 0
-				&& usbInterfaceDescr->bNumEndpoints == 2)
-			{
-				if (::usb_claim_interface(usbDSOHandle, usbInterfaceDescr->bInterfaceNumber))
-				{
-					if (::usb_close(usbDSOHandle))
-					{
-						qDebug("Can't close USB handle");
-					}
-
-					dsoIOMutex.unlock();
-					qDebug("Not able to claim USB interface");
-					return -3;
-				}
-
-				interfaceNumber = usbInterfaceDescr->bInterfaceNumber;
-				interfaceIsClaimed = true;
-
-				for (int i = 0; i < usbInterfaceDescr->bNumEndpoints; i++)
-				{
-					usb_endpoint_descriptor *usbEndpointDescr = &usbInterfaceDescr->endpoint[i];
-					switch (usbEndpointDescr->bEndpointAddress)
-					{
-						case 0x02:  // EP OUT
-							epOutMaxPacketLen = usbEndpointDescr->wMaxPacketSize;
-							qDebug("EP OUT MaxPacketLen = %i", epOutMaxPacketLen);
-							break;
-						case 0x86:  // EP IN
-							epInMaxPacketLen = usbEndpointDescr->wMaxPacketSize;
-							qDebug("EP IN MaxPacketLen = %i", epInMaxPacketLen);
-							break;
-						default:
-							qDebug("Unknown endpoint #%02X", usbEndpointDescr->bEndpointAddress);
-					}
-				}
-
-				break;
-			}
-		}
-		
-		if (!interfaceIsClaimed)
-		{
-			qDebug("Can't find USB interface (Class:0xFF, SubClass:0, Protocol:0) with two endpoints");
-			return -4;
-		}
-		
-		dsoIOMutex.unlock();
-		
-		return 0;
+		else
+			message = tr("No Hantek oscilloscope found");
 #else
 		libusb_device **deviceList;
 		libusb_device *device;
-		int errorCode = LIBUSB_SUCCESS;
-		QString deviceAddress;
 		
 		if(this->handle)
 			libusb_close(this->handle);
@@ -258,9 +242,9 @@ namespace Hantek {
 			message = tr("No Hantek oscilloscope found");
 		
 		libusb_free_device_list(deviceList, true);
+#endif
 		
 		return message;
-#endif
 	}
 	
 	/// \brief Disconnect the device.
@@ -269,11 +253,19 @@ namespace Hantek {
 			return;
 		
 		// Release claimed interface
+#if LIBUSB_VERSION == 0
+		usb_release_interface(this->handle, this->interface);
+#else
 		libusb_release_interface(this->handle, this->interface);
+#endif
 		this->interface = -1;
 		
 		// Close device handle
+#if LIBUSB_VERSION == 0
+		usb_close(this->handle);
+#else
 		libusb_close(this->handle);
+#endif
 		this->handle = 0;
 		
 		emit disconnected();
@@ -324,20 +316,14 @@ namespace Hantek {
 			return errorCode;
 		
 #if LIBUSB_VERSION == 0
-		int i, rv = -ETIMEDOUT;
-		for(i = 0; (rv == -ETIMEDOUT) && (i < attempts); i++)
-		{
-			rv = ::usb_bulk_write(usbDSOHandle, EP_BULK_OUT | USB_ENDPOINT_OUT, (char*)data, length, timeout);
-		}
+		errorCode = LIBUSB_ERROR_TIMEOUT;
+		for(int attempt = 0; (attempt < attempts || attempts == -1) && errorCode == LIBUSB_ERROR_TIMEOUT; attempt++)
+			errorCode = usb_bulk_write(this->handle, HANTEK_EP_OUT, (char *) data, length, HANTEK_TIMEOUT);
 		
-		if (rv < 0)
-		{
-			qDebug("Usb write bulk returns error %i", rv);
-			qDebug("Error: %s", ::usb_strerror());
-			return rv;
-		}
+		if(errorCode == LIBUSB_ERROR_NO_DEVICE)
+			this->disconnect();
 		
-		return 0;
+		return errorCode;
 #else
 		return this->bulkTransfer(HANTEK_EP_OUT, data, length, attempts);
 #endif
@@ -357,20 +343,14 @@ namespace Hantek {
 			return errorCode;
 		
 #if LIBUSB_VERSION == 0
-		int i, rv = -ETIMEDOUT;
-		for(i = 0; (rv == -ETIMEDOUT) && (i < attempts); i++)
-		{
-			rv = ::usb_bulk_read(usbDSOHandle, EP_BULK_IN | USB_ENDPOINT_IN, (char*)data, length, timeout);
-		}
+		errorCode = LIBUSB_ERROR_TIMEOUT;
+		for(int attempt = 0; (attempt < attempts || attempts == -1) && errorCode == LIBUSB_ERROR_TIMEOUT; attempt++)
+			errorCode = usb_bulk_read(this->handle, HANTEK_EP_IN, (char *) data, length, HANTEK_TIMEOUT);
 		
-		if (rv < 0)
-		{
-			qDebug("Usb read bulk returns error %i", rv);
-			qDebug("Error: %s", ::usb_strerror());
-			return rv;
-		}
+		if(errorCode == LIBUSB_ERROR_NO_DEVICE)
+			this->disconnect();
 		
-		return 0;
+		return errorCode;
 #else
 		return this->bulkTransfer(HANTEK_EP_IN, data, length, attempts);
 #endif
@@ -412,8 +392,15 @@ namespace Hantek {
 		
 		errorCode = this->inPacketLength;
 		int packet;
-		for(packet = 0; packet < packetCount && errorCode == this->inPacketLength; packet++)
+		for(packet = 0; packet < packetCount && errorCode == this->inPacketLength; packet++) {
+#if LIBUSB_VERSION == 0
+			errorCode = LIBUSB_ERROR_TIMEOUT;
+			for(int attempt = 0; (attempt < attempts || attempts == -1) && errorCode == LIBUSB_ERROR_TIMEOUT; attempt++)
+				errorCode = usb_bulk_read(this->handle, HANTEK_EP_IN, (char *) data + packet * this->inPacketLength, this->inPacketLength, HANTEK_TIMEOUT);
+#else
 			errorCode = this->bulkTransfer(HANTEK_EP_IN, data + packet * this->inPacketLength, this->inPacketLength, attempts);
+#endif
+		}
 		
 		if(errorCode < 0)
 			return errorCode;
@@ -421,7 +408,6 @@ namespace Hantek {
 			return (packet - 1) * this->inPacketLength + errorCode;
 	}
 	
-#if LIBUSB_VERSION != 0
 	/// \brief Control transfer to the oscilloscope.
 	/// \param type The request type, also sets the direction of the transfer.
 	/// \param request The request field of the packet.
@@ -437,13 +423,16 @@ namespace Hantek {
 		
 		int errorCode = LIBUSB_ERROR_TIMEOUT;
 		for(int attempt = 0; (attempt < attempts || attempts == -1) && errorCode == LIBUSB_ERROR_TIMEOUT; attempt++)
+#if LIBUSB_VERSION == 0
+			errorCode = usb_control_msg(this->handle, type, request, value, index, (char *) data, length, HANTEK_TIMEOUT);
+#else
 			errorCode = libusb_control_transfer(this->handle, type, request, value, index, data, length, HANTEK_TIMEOUT);
+#endif
 		
 		if(errorCode == LIBUSB_ERROR_NO_DEVICE)
 			this->disconnect();
 		return errorCode;
 	}
-#endif
 	
 	/// \brief Control write to the oscilloscope.
 	/// \param request The request field of the packet.
@@ -457,25 +446,7 @@ namespace Hantek {
 		if(!this->handle)
 			return LIBUSB_ERROR_NO_DEVICE;
 		
-#if LIBUSB_VERSION == 0
-		int i, rv = -ETIMEDOUT;
-		for(i = 0; (rv == -ETIMEDOUT) && (i < attempts); i++)
-		{
-			rv = ::usb_control_msg(usbDSOHandle, USB_ENDPOINT_OUT | USB_TYPE_VENDOR,
-									request, value, index, (char*)data, length, timeout);
-		}
-		
-		if (rv < 0)
-		{
-			qDebug("Usb write control message %02X returns error %i", request, rv);
-			qDebug("Error: %s", ::usb_strerror());
-			return rv;
-		}
-		
-		return 0;
-#else
 		return this->controlTransfer(LIBUSB_REQUEST_TYPE_VENDOR | LIBUSB_ENDPOINT_OUT, request,  data, length, value, index,attempts);
-#endif
 	}
 	
 	/// \brief Control read to the oscilloscope.
@@ -490,25 +461,7 @@ namespace Hantek {
 		if(!this->handle)
 			return LIBUSB_ERROR_NO_DEVICE;
 		
-#if LIBUSB_VERSION == 0
-		int i, rv = -ETIMEDOUT;
-		for(i = 0; (rv == -ETIMEDOUT) && (i < attempts); i++)
-		{
-			rv = ::usb_control_msg(usbDSOHandle, USB_ENDPOINT_IN | USB_TYPE_VENDOR,
-									request, value, index, (char*)data, length, timeout);
-		}
-		
-		if (rv < 0)
-		{
-			qDebug("Usb read control message %02X returns error %i", request, rv);
-			qDebug("Error: %s", ::usb_strerror());
-			return rv;
-		}
-		
-		return 0;
-#else
 		return this->controlTransfer(LIBUSB_REQUEST_TYPE_VENDOR | LIBUSB_ENDPOINT_IN, request, data, length, value, index, attempts);
-#endif
 	}
 	
 	/// \brief Gets the speed of the connection.
